# libdl

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  TutorialConfig.cpp  TutorialConfig.h  main.cpp  setup.py  test.ipynb
include/: ErrorFunctions.h  Layer.h  Model.h  TensorWrapper.h  data.h  data_handler.h
python_scripts/: data_functionality.py  presentation.ipynb  test.ipynb
src/: ErrorFunctions.cpp  Layer.cpp  TensorWrapper.cpp  data.cpp  data_handler.cpp
src/Layer/: Layer.cpp
src/Model/: Model.cpp
tests/: Layer_tests.cpp  TensorWrapper_tests.cpp  pybind_tests.cpp  tests.cpp
